Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18765

fdb_rollback hangs after upgrade from v1 to v2

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.5.0
    • 4.5.0
    • forestdb
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      I am trying to verify MB-18674. The good news is that I can now see fdb file convert to v2 after compaction without crash. But I also found that fdb_rollback hangs.

      1. 0x40ae0a1 github.com/couchbase/indexing/secondary/fdb._Cfunc_fdb_rollback+0x41 ??:0
      2. 0x40af6b2 github.com/couchbase/indexing/secondary/fdb.(*KVStore).Rollback+0x312 /Users/jliang/Documents/eclipse/watson/watson/goproj/src/github.com/couchbase/indexing/secondary/fdb/commit.go:56
      3. 0x40e1621 github.com/couchbase/indexing/secondary/indexer.(*fdbSlice).RollbackToZero+0x61 /Users/jliang/Documents/eclipse/watson/watson/goproj/src/github.com/couchbase/indexing/secondary/indexer/forestdb_slice_writer.go:938
      4. 0x4178169 github.com/couchbase/indexing/secondary/indexer.(*storageMgr).handleRollback+0xb89 /Users/jliang/Documents/eclipse/watson/watson/goproj/src/github.com/couchbase/indexing/secondary/indexer/storage_manager.go:503

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ritam.sharma Ritam Sharma
            jliang John Liang
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty