MB-18765 Abort the 2nd phase of compaction on rollback request

- Added the missing abort routine for rollback/compaction cancel
in the second phase of compaction (moving delta)

Change-Id: I25ad9fff8524ce279f195217fd2b1e56173bef9b
Reviewed-on: http://review.couchbase.org/61799
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>